Gestion de pedidos completa mas arreglo del api